feat-设置整体布局

--- a/Echarts-练习/index.html
+++ b/Echarts-练习/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    4566
+    <div class="wrap">
+        <div class="header">我是头部</div>
+        <div class="main-box">
+            <div class="left">
+                <div class="panel"></div>
+                <div class="panel"></div>
+                <div class="panel"></div>
+            </div>
+            <div class="center">
+
+            </div>
+
+            <div class="right">
+                <div class="panel"></div>
+                <div class="panel"></div>
+                <div class="panel"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
+<script src="./js/flexible.js"></script>
