--- a/Echarts-练习/index.html
+++ b/Echarts-练习/index.html
@@ -19,6 +19,12 @@
                 <div class="panel"></div>
             </div>
             <div class="center">
+                <div class="no"></div>
+                <div class="map">
+                    <div class="map1"></div>
+                    <div class="map2"></div>
+                    <div class="map3"></div>
+                </div>
 
             </div>
 
