--- a/Echarts-练习/index.html
+++ b/Echarts-练习/index.html
@@ -24,6 +24,7 @@
                     <div class="map1"></div>
                     <div class="map2"></div>
                     <div class="map3"></div>
+                    <div class="chart"></div>
                 </div>
 
             </div>
