--- a/Echarts-练习/index.html
+++ b/Echarts-练习/index.html
@@ -14,7 +14,7 @@
         <div class="header">我是头部</div>
         <div class="main-box">
             <div class="left">
-                <div class="panel"></div>
+                <div class="panel bar"></div>
                 <div class="panel"></div>
                 <div class="panel"></div>
             </div>
@@ -41,3 +41,5 @@
 
 </html>
 <script src="./js/flexible.js"></script>
+<script src="./js/echarts.min.js"></script>
+<script src="./js/index.js"></script>
