--- a/Echarts-练习/index.html
+++ b/Echarts-练习/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="right">
-                <div class="panel"></div>
+                <div class="panel bar2"></div>
                 <div class="panel"></div>
                 <div class="panel"></div>
             </div>
