--- a/网易云课堂-【小鹿线】企业真实前端面试题-exercise/js-01-for循环中的i.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题-exercise/js-01-for循环中的i.html
@@ -22,9 +22,10 @@
         }, 1000)
     }
 	
+	// 下面的只看分号最后一个条件
 	var  x;
 	for(var i=0,j=0;j<10,i<6;i++,j++){
-		console.log(x,j)
+		console.log(i)
 		x=i+j
 	}
 	console.log(x)
