--- a/网易云课堂-【小鹿线】企业真实前端面试题-exercise/css-01-居中.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题-exercise/css-01-居中.html
@@ -8,38 +8,38 @@
 			html {
 				width: 100%;
 				height: 100%;
-			}
-
-		/* 	div {
-				width: 200px;
-				height: 200px;
-				background: #000;
+			}	
+			
+			/* div{
+				width:200px;
+				height:200px;
+				background: yellowgreen;
 				position: absolute;
-				top: 50%;
-				left: 50%;
-				margin-left: -100px;
-				margin-top: -100px;
+				left:50%;
+				top:50%;
+				margin-left:-100px;
+				margin-top:-100px;
+				
 			} */
 			
-			/* div {
-				width: 200px;
-				height: 200px;
-				background: red;
+			/* div{
+				width:200px;
+				height:200px;
+				background: yellowgreen;
 				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform:translate(-50%,-50%);
+				top:50%;
+				left:50%;
+				transform:translate(-50%,-50%)
 			} */
 			
-			
-			div {
-				width: 200px;
-				height: 200px;
-				background: yellow;
-				position: absolute;
+			div{
+				width:100px;
+				height:100px;
+				background:red;
+				position:absolute;
 				top:0;
-				bottom:0;
 				left:0;
+				bottom:0;
 				right:0;
 				margin:auto;
 			}
