--- a/网易云课堂-【小鹿线】企业真实前端面试题-exercise/css-02-双飞翼（先加载中间盒子）.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题-exercise/css-02-双飞翼（先加载中间盒子）.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<style>
-			html,
+			/* html,
 			body {
 				width: 100%;
 				height: 100%;
@@ -45,14 +45,66 @@
 				background: red;
 				margin-left:-100px;
 				float: left;
+			} */
+
+			html,
+			body {
+				width: 100%;
+				height: 100%;
+			}
+
+			* {
+				margin: 0;
+				padding: 0;
+			}
+
+			.box {
+				width: 100%;
+				height: 100%;
+				background: grey;
+			}
+			
+			.center {
+				width: 100%;
+				height: 100%;
+				background: red;
+				float: left;
+				padding-left:200px;
+				padding-right:300px;	
+				box-sizing: border-box;		
+			}
+			
+
+			.left {
+				width: 200px;
+				height:100%;
+				background: yellow;
+				float: left;
+				margin-left:-100%;
+			}
+
+			
+			.right {
+				width:300px;
+				height:100%;
+				float: left;
+				margin-left:-300px;
+				background: palegreen;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="container">
+		<!-- 	<div class="container">
 			<div class="content">中间</div>
 			</div>
 		<div class="left">左边</div>
-		<div class="right">右边</div>
+		<div class="right">右边</div> -->
+
+
+		<div class="box">
+			<div class="center">中间</div>
+			<div class="left">左边</div>
+			<div class="right">右边</div>
+		</div>
 	</body>
 </html>
