解析地址栏参数

--- a/网易云课堂-【小鹿线】企业真实前端面试题课程代码/html+css+js+jq+移动端面试题笔记/offer/js/08/demo2/index.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题课程代码/html+css+js+jq+移动端面试题笔记/offer/js/08/demo2/index.html
@@ -31,13 +31,13 @@ a.fun(3);  //0
 
 //n=0
 //o=undefined
-var b = fun(0).fun(1).fun(2).fun(3);
+var b = fun(0).fun(1).fun(2).fun(3); //只执行了return
 
 //n=0
 //o=undefined 
 var c = fun(0).fun(1);
-c.fun(2)
-c.fun(3);
+c.fun(2)  //把c重新来了一遍
+c.fun(3);  //把c重新来了一遍
 
 </script>
 	
