--- a/网易云课堂-【小鹿线】企业真实前端面试题课程代码/html+css+js+jq+移动端面试题笔记/offer/js/note.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题课程代码/html+css+js+jq+移动端面试题笔记/offer/js/note.html
@@ -83,7 +83,7 @@
 	
 11>use strict
 
-	是什么===》严格模式(解决一些js的怪癖行为的)
+	是什么===》严格模式(解决一些js的怪癖行为的，比如给函数内部的arguments重新赋值，或者重复用var声明变量)
 	好处  ===》检测代码的，压缩的节约文件大小
 	坏处  ===》阻塞后面代码的运行，压缩出现错误
 
