删除部分文件

--- a/网易云课堂-【小鹿线】企业真实前端面试题-exercise/js-05-深拷贝.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题-exercise/js-05-深拷贝.html
@@ -88,6 +88,8 @@
 
 		for (var key in obj1) {
 			if(typeof obj1[key]=="object"){
+				console.log(obj1[key] instanceof Array)
+				console.log(obj1[key].constructor== Array)
 				obj2[key]=obj1[key].constructor==Array?[]:{};
 				deepCopy(obj1[key],obj2[key])
 				
@@ -97,8 +99,7 @@
 		}
 		return obj2
 	}
-	
-	console.log(deepCopy(obj1, obj2) )
+		console.log(deepCopy(obj1, obj2) )
 	
 	obj1.age=15;
 	obj2.age=16;
