--- a/网易云课堂-【小鹿线】企业真实前端面试题课程代码/vue面试题笔记代码/12 watch和computed差异/note.html
+++ b/网易云课堂-【小鹿线】企业真实前端面试题课程代码/vue面试题笔记代码/12 watch和computed差异/note.html
@@ -6,8 +6,10 @@
 		1. 计算属性是由data中的已知值，得到一个新的值
 		2. 性能不好
 		3. 别人变化影响我自己
+		有缓存机制
 
 	watch : 监听数据的变化
 
 		1. 监听data中的数据
 		2. 我的变化影响别人
+		可以监听路由的变化
