--- a/2021前端校招练习/js-使下段成立.html
+++ b/2021前端校招练习/js-使下段成立.html
@@ -11,8 +11,7 @@
 	let value = 0;
 	Object.defineProperty(window, "a", {
 		get() {
-			console.log(1)
-			return value += 1;
+			return ++value
 		}
 	})
 
