--- a/2021前端校招练习/js-数组去重.html
+++ b/2021前端校招练习/js-数组去重.html
@@ -47,10 +47,10 @@
 	// 	return arr.indexOf(item) === index
 	// })
 
-	let result = arr.filter((item, index) => {
-		return arr.indexOf(item) === index
-	})
-	console.log(result)
+	// let result = arr.filter((item, index) => {
+	// 	return arr.indexOf(item) === index
+	// })
+	
 
 	//2 相邻元素排序,先排序在去重
 	// let arr1 = arr.sort();
@@ -154,7 +154,6 @@
 			}
 			return pre
 		}, [])
-
 
 	}
 
