--- a/2021前端校招练习/css-绝对居中.html
+++ b/2021前端校招练习/css-绝对居中.html
@@ -25,7 +25,7 @@
       height: 200px;
       position: relative;
       background: #000;
-      border: 1px solid red;
+      border: 1px solid blue;
 
     }
 
